--- a/templates/default/local_settings.py.erb
+++ b/templates/default/local_settings.py.erb
@@ -21,7 +21,7 @@ LOGIN_REDIRECT_URL = WEBROOT+'/admin'
 # with the list of host/domain names that the application can serve.
 # For more information see:
 # https://docs.djangoproject.com/en/dev/ref/settings/#allowed-hosts
-#ALLOWED_HOSTS = ['horizon.example.com', ]
+ALLOWED_HOSTS = <%= node['openstack']['dashboard']['allowed_hosts'] %>
 
 <% if node["openstack"]["dashboard"]["ssl_offload"] %>
 # Set SSL proxy settings:
